# gifting-ai

./: .env  main.py  pyproject.toml  speed_regalo.json  suggest_gift.py
